# canvas-cli

./: .gitattributes  Cargo.toml  README.md  flake.nix  readme.md
.github/workflows/: build.yaml
docs/: download.tape  help.tape  submit-help.tape  submit-ids.tape  submit-url.tape  submit.tape
src/: assignments.rs  auth.rs  download.rs  lib.rs  main.rs  query_assignments.graphql  submit.rs
