[package]
name = "canvas-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
confy = "0.5.1"
csscolorparser = "0.6.2"
env_logger = "0.10.0"
fuzzy-matcher = "0.3.7"
graphql_client = { version = "0.12.0", features = ["reqwest", "reqwest-blocking"] }
indicatif = "0.17.3"
inquire = "0.5.3"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["stream", "multipart"] }
serde = "1.0.152"
serde_derive = "1.0.152"
tokio = {version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.6", features = ["codec"] }
url = "2.3.1"
