[package]
name = "canvas-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.16", features = ["derive"] }
clap_complete_command = { version = "0.6.1", features = ["nushell"] }
colored = "3.0.0"
confy = "0.6.0"
csscolorparser = "0.7.0"
env_logger = "0.11.7"
futures = "0.3.30"
human_bytes = "0.4.3"
indicatif = "0.17.7"
inquire = "0.7.5"
log = "0.4.20"
regex = "1.10.2"
reqwest = { version = "0.12.13", features = [
    "stream",
    "multipart",
    "json",
    "native-tls-vendored",
] }
serde = "1.0.195"
serde_derive = "1.0.195"
serde_json = "1.0.133"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
url = "2.5.0"
